; ModuleID = '/home/carl/AnghaBench/lab/engine/code/deepmind/extr_headless_egl_glimp.c_GLimp_Shutdown.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/deepmind/extr_headless_egl_glimp.c_GLimp_Shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@egl_display = common dso_local global i32 0, align 4
@EGL_NO_SURFACE = common dso_local global i32 0, align 4
@EGL_NO_CONTEXT = common dso_local global i32 0, align 4
@egl_surface = common dso_local global i32 0, align 4
@egl_context = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GLimp_Shutdown() #0 {
  %1 = load i32, i32* @egl_display, align 4
  %2 = load i32, i32* @EGL_NO_SURFACE, align 4
  %3 = load i32, i32* @EGL_NO_SURFACE, align 4
  %4 = load i32, i32* @EGL_NO_CONTEXT, align 4
  %5 = call i32 @eglMakeCurrent(i32 %1, i32 %2, i32 %3, i32 %4)
  %6 = call i32 @RETURN_IF_EGL_ERROR(i32 %5)
  %7 = load i32, i32* @egl_display, align 4
  %8 = load i32, i32* @egl_surface, align 4
  %9 = call i32 @eglDestroySurface(i32 %7, i32 %8)
  %10 = call i32 @RETURN_IF_EGL_ERROR(i32 %9)
  %11 = load i32, i32* @egl_display, align 4
  %12 = load i32, i32* @egl_context, align 4
  %13 = call i32 @eglDestroyContext(i32 %11, i32 %12)
  %14 = call i32 @RETURN_IF_EGL_ERROR(i32 %13)
  %15 = load i32, i32* @egl_display, align 4
  %16 = call i32 @TerminateInitializedEGLDisplay(i32 %15)
  %17 = call i32 @RETURN_IF_EGL_ERROR(i32 %16)
  %18 = call i32 (...) @ShutDownEGLSubsystem()
  ret void
}

declare dso_local i32 @RETURN_IF_EGL_ERROR(i32) #1

declare dso_local i32 @eglMakeCurrent(i32, i32, i32, i32) #1

declare dso_local i32 @eglDestroySurface(i32, i32) #1

declare dso_local i32 @eglDestroyContext(i32, i32) #1

declare dso_local i32 @TerminateInitializedEGLDisplay(i32) #1

declare dso_local i32 @ShutDownEGLSubsystem(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
